2002-11-21  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-smb.el (tramp-use-smb): Remove variable.  "smb" method is
	active now; beta test can start.
	(tramp-smb-handle-file-newer-than-file-p): Apply
	`tramp-smb-time-less-p' but `tramp-time-diff'.  Seems to be more
	general.
	(tramp-smb-handle-insert-directory): Use SWITCHES in order to
	decide how to sort (but obscure dired variables).  Don't apply
	`save-excursion'; the cursor must be at the end of the buffer
	after insertion.  I should have it done from the beginning ...
	(tramp-smb-handle-write-region): Remove unused variable
	`trampbuf'.  Thanx to XEmacs compiler warning.
	(tramp-smb-read-file-entry): Simplify handling of the dont-know
	mtime value.
	(tramp-smb-maybe-open-connection): Remove unused variable
	`last-cmd-time'.  Thanx to XEmacs compiler warning.

2002-11-20  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-smb.el (top-level): Autoload of "time-date" removed.
	Needed functions snarfed from there.
	(tramp-smb-handle-insert-directory): Dummy user renamed to
	"nobody".
	(tramp-smb-read-file-entry): Return list shortened; just MTIME is
	used for all time strings and calculations.
	(tramp-smb-open-connection): Test of anonymous USER introduced.
	Also an empty HOST is tested, but does it makes sense?
	(tramp-smb-half-a-year): New constant, in order to decide whether
	to display time or year in dired buffers.
	(tramp-smb-parse-time-months ): Snarfed from "time-date".  Alist
	mapping month names to integers.
	(tramp-smb-time-less-p): Snarfed from "time-date".  Replaces
	`time-less-p'.
	(tramp-smb-time-subtract): Snarfed from "time-date".  Replaces
	`tramp-time-diff', which returns just an integer only.

2002-11-19  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-smb.el (top-level): Autoload "time-date".  Just a
	work-around, until I have replaced the corresponding functions by
	own implementation.
	(tramp-smb-errors): List of error strings extended.