@@ -1,3 +1,8 @@
+2002-11-22  Michael Albinus  <Michael.Albinus@alcatel.de>
+
+	* tramp.texi (External transfer methods): Remind the application
+	of "$$" in share names of the `smb' method.
+
 2002-11-21  Michael Albinus  <Michael.Albinus@alcatel.de>
 
 	* tramp.texi (External transfer methods): Add description of `smb'
